deployments/rocksolid/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rocksolid
  labels:
    app: rocksolid
    version: v1
spec:
  # Cattle not pet's!
  replicas: 1
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: rocksolid
      version: v1
  template:
    metadata:
      annotations:
        sidecar.istio.io/inject: "true"
      labels:
        app: rocksolid
        version: v1
    spec:
      containers:
      - name: rocksolid
        imagePullPolicy: Always
        image: does-not-exist
        resources:
          requests:
            cpu: "50m"
            memory: "100Mi"
          limits:
            cpu: "500m"
            memory: "1000Mi"
        ports:
          - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /live
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 600
          timeoutSeconds: 5
          failureThreshold: 5
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 10
          periodSeconds: 5
          timeoutSeconds: 5
          failureThreshold: 2
        # env:
      terminationGracePeriodSeconds: 5
