deployments/rocksolid/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rocksolid
  labels:
    service: rocksolid-v1
spec:
  ports:
  - port: 8080
    name: http
  selector:
    app: rocksolid
    version: v1
